manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kfp-editor
  namespace: kubeflow
spec:
  selector: 
    app: kfp-editor
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 4173
  type: ClusterIP
