manifest/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kfp-editor
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /kfp-editor/
    rewrite:
      uri: /
    route:
    - destination:
        host: kfp-editor.kubeflow.svc.cluster.local
        port:
          number: 80
